Use Font Awesome icons sitewide

--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -45,7 +45,7 @@
     }
 
     function creditCardFormatter(cell){
-        return cell.getValue() ? '<img src="../favicon.svg" class="w-4 h-4" alt="">' : '';
+        return cell.getValue() ? '<i class="fas fa-credit-card w-4 h-4"></i>' : '';
     }
 
     fetch('../php_backend/public/account_dashboard.php')
