--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg">
-    <!-- Inline icons use favicon.svg; Font Awesome not required -->
+    <!-- Font Awesome icons loaded via menu.js -->
     <style>
         body { font-family: 'Inter', sans-serif; }
         h1, h2, h3, h4, h5, h6 { font-family: 'Roboto', sans-serif; font-weight: 700; }
@@ -28,15 +28,15 @@
 
             <section class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <img src="../favicon.svg" class="w-16 h-16 mb-2" alt="">
+                    <i class="fas fa-chart-line w-16 h-16 mb-2"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <img src="../favicon.svg" class="w-16 h-16 mb-2" alt="">
+                    <i class="fas fa-piggy-bank w-16 h-16 mb-2"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <img src="../favicon.svg" class="w-16 h-16 mb-2" alt="">
+                    <i class="fas fa-wallet w-16 h-16 mb-2"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
             </section>
