--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
 
-    <!-- Icons rely on favicon.svg; no Font Awesome needed -->
+    <!-- Font Awesome icons loaded via menu.js -->
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
     <div class="flex min-h-screen">
