--- a/frontend/recurring_spend.html
+++ b/frontend/recurring_spend.html
@@ -19,7 +19,7 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Recurring Spend Detection</h1>
             <p class="mb-4">Run an analysis of the last 12 months to find subscriptions and other repeat expenses. The results highlight ongoing commitments so you know where money leaves your account regularly.</p>
-            <button id="run-analysis" class="bg-indigo-600 text-white px-4 py-2 rounded mb-4"><img src="../favicon.svg" class="inline w-4 h-4 mr-2" alt="">Run Analysis</button>
+            <button id="run-analysis" class="bg-indigo-600 text-white px-4 py-2 rounded mb-4"><i class="fas fa-chart-line inline w-4 h-4 mr-2"></i>Run Analysis</button>
             <div id="results-grid"></div>
             <p id="total" class="mt-4 text-right"></p>
         </main>
