--- a/frontend/segments.html
+++ b/frontend/segments.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Expires" content="0">
     <title>Manage Segments</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome removed; using favicon.svg for icons -->
+    <!-- Font Awesome icons loaded via menu.js -->
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
     <div class="flex min-h-screen">
