--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
-    <!-- Icons use favicon.svg; Font Awesome removed -->
+    <!-- Font Awesome icons loaded via menu.js -->
 
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
@@ -34,7 +34,7 @@
             <p class="mb-4">Send your savings goal and the last 12 months of category totals to the AI to propose next month's budgets and provide a brief explanation.</p>
             <form id="ai-form" class="md:flex md:space-x-4 space-y-4 md:space-y-0">
                 <label class="block">Savings Goal (£)<br><input type="number" step="0.01" id="goal" class="border p-2 rounded" data-help="Monthly amount you want to save. The AI uses this plus a year of history to set budgets."></label>
-                <button id="ai-run" type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end"><img src="../favicon.svg" class="inline w-4 h-4 mr-1" alt="">Generate Budgets</button>
+                <button id="ai-run" type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end"><i class="fas fa-robot inline w-4 h-4 mr-1"></i>Generate Budgets</button>
             </form>
             <div id="ai-result" class="mt-4"></div>
 
@@ -87,7 +87,7 @@ async function loadBudgets(){
                 {title:'Budget',field:'amount',formatter:'money',formatterParams:{symbol:'£',precision:2},hozAlign:'right'},
                 {title:'Spent',field:'spent',formatter:'money',formatterParams:{symbol:'£',precision:2},hozAlign:'right'},
                 {title:'Left',field:'left',formatter:'money',formatterParams:{symbol:'£',precision:2},hozAlign:'right'},
-                {formatter:()=>'<img src="../favicon.svg" class="w-4 h-4" alt="">',width:40,hozAlign:'center',cellClick:async(e,cell)=>{
+                {formatter:()=>'<i class="fas fa-trash w-4 h-4"></i>',width:40,hozAlign:'center',cellClick:async(e,cell)=>{
                     if(!confirm('Delete this budget?')) return;
                     const id=cell.getRow().getData().id;
                     await fetch('../php_backend/public/budgets.php',{
@@ -139,7 +139,7 @@ document.getElementById('ai-form').addEventListener('submit',async e=>{
     const btn=document.getElementById('ai-run');
     btn.disabled=true;
     btn.classList.add('opacity-50','cursor-not-allowed');
-    resultEl.innerHTML='<img src="../favicon.svg" class="inline w-4 h-4 mr-2 animate-spin" alt="">Submitting to AI...';
+    resultEl.innerHTML='<i class="fas fa-spinner fa-spin inline w-4 h-4 mr-2"></i>Submitting to AI...';
     showMessage('AI budgeting started');
     try{
         const res=await fetch('../php_backend/public/ai_budget.php',{
@@ -147,7 +147,7 @@ document.getElementById('ai-form').addEventListener('submit',async e=>{
             headers:{'Content-Type':'application/json'},
             body:JSON.stringify({goal:parseFloat(goal),month:parseInt(month),year:parseInt(year)})
         });
-        resultEl.innerHTML='<img src="../favicon.svg" class="inline w-4 h-4 mr-2 animate-spin" alt="">Awaiting AI response...';
+        resultEl.innerHTML='<i class="fas fa-spinner fa-spin inline w-4 h-4 mr-2"></i>Awaiting AI response...';
         const data=await res.json();
         if(data.status==='ok'){
             document.getElementById('goal').value='';
