--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -4,74 +4,74 @@
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">General Overview</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-      <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="index.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Home</a></li>
-      <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="upload.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Upload OFX Files</a></li>
+      <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="index.html"><i class="fas fa-home mr-1"></i> Home</a></li>
+      <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="upload.html"><i class="fas fa-upload mr-1"></i> Upload OFX Files</a></li>
     </ul>
   </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Transaction Hub</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="monthly_statement.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Monthly Statement</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="report.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Transaction Reports</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="search.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Search Transactions</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="transfers.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Transfers</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ignored.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Ignored Transactions</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="monthly_statement.html"><i class="fas fa-file-invoice mr-1"></i> Monthly Statement</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="report.html"><i class="fas fa-file-lines mr-1"></i> Transaction Reports</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="search.html"><i class="fas fa-search mr-1"></i> Search Transactions</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="transfers.html"><i class="fas fa-right-left mr-1"></i> Transfers</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ignored.html"><i class="fas fa-eye-slash mr-1"></i> Ignored Transactions</a></li>
     </ul>
   </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Data Dashboards</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="yearly_dashboard.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Yearly Dashboard</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="all_years_dashboard.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> All Years Dashboard</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="monthly_dashboard.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Monthly Dashboard</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="group_dashboard.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Group Dashboard</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="account_dashboard.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Account Dashboard</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="recurring_spend.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Recurring Spend</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="yearly_dashboard.html"><i class="fas fa-calendar mr-1"></i> Yearly Dashboard</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="all_years_dashboard.html"><i class="fas fa-calendar-alt mr-1"></i> All Years Dashboard</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="monthly_dashboard.html"><i class="fas fa-calendar-day mr-1"></i> Monthly Dashboard</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="group_dashboard.html"><i class="fas fa-object-group mr-1"></i> Group Dashboard</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="account_dashboard.html"><i class="fas fa-wallet mr-1"></i> Account Dashboard</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="recurring_spend.html"><i class="fas fa-rotate mr-1"></i> Recurring Spend</a></li>
     </ul>
   </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Data Graphs</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="graphs.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Graphs</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="graphs.html"><i class="fas fa-chart-bar mr-1"></i> Graphs</a></li>
     </ul>
   </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Budget Plans</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="budgets.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Budgets</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="budgets.html"><i class="fas fa-piggy-bank mr-1"></i> Budgets</a></li>
     </ul>
   </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Data Organisation</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="tags.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Manage Tags</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ai_tags.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> AI Tags</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="tags.html"><i class="fas fa-tags mr-1"></i> Manage Tags</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ai_tags.html"><i class="fas fa-robot mr-1"></i> AI Tags</a></li>
         <li>
           <a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="missing_tags.html">
-            <span class="flex items-center"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Missing Tags</span>
+            <span class="flex items-center"><i class="fas fa-question-circle mr-1"></i> Missing Tags</span>
             <span id="missing-tags-count" class="ml-auto bg-red-600 text-white text-xs font-bold rounded-full px-2 hidden"></span>
           </a>
         </li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="categories.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Manage Categories</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="groups.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Manage Groups</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="segments.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Manage Segments</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="categories.html"><i class="fas fa-folder-open mr-1"></i> Manage Categories</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="groups.html"><i class="fas fa-layer-group mr-1"></i> Manage Groups</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="segments.html"><i class="fas fa-chart-pie mr-1"></i> Manage Segments</a></li>
       </ul>
     </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Admin Tools</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="processes.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Run Processes</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="logs.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> View Logs</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="dedupe.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Remove Duplicates</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="backup.html"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Backup &amp; Restore</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../users.php"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Manage Users</a></li>
-        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../logout.php"><img src="../favicon.svg" class="w-4 h-4 mr-1" alt=""> Logout</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="processes.html"><i class="fas fa-gears mr-1"></i> Run Processes</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="logs.html"><i class="fas fa-scroll mr-1"></i> View Logs</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="dedupe.html"><i class="fas fa-clone mr-1"></i> Remove Duplicates</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="backup.html"><i class="fas fa-database mr-1"></i> Backup &amp; Restore</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../users.php"><i class="fas fa-users mr-1"></i> Manage Users</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../logout.php"><i class="fas fa-right-from-bracket mr-1"></i> Logout</a></li>
     </ul>
   </div>
 </div>
