--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -56,7 +56,7 @@ async function loadTags(){
                 const t = cell.getRow().getData();
                 const container = document.createElement('div');
                 const edit = document.createElement('button');
-                edit.innerHTML = '<img src="../favicon.svg" class="w-4 h-4" alt="">';
+                edit.innerHTML = '<i class="fas fa-edit w-4 h-4"></i>';
                 edit.setAttribute('aria-label','Edit');
                 edit.className = 'bg-indigo-600 text-white px-2 py-1 rounded mr-2';
                 edit.addEventListener('click', async () => {
@@ -75,7 +75,7 @@ async function loadTags(){
                     showMessage('Tag updated');
                 });
                 const del = document.createElement('button');
-                del.innerHTML = '<img src="../favicon.svg" class="w-4 h-4" alt="">';
+                del.innerHTML = '<i class="fas fa-trash w-4 h-4"></i>';
                 del.setAttribute('aria-label','Delete');
                 del.className = 'bg-red-600 text-white px-2 py-1 rounded';
                 del.addEventListener('click', async () => {
