--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -23,9 +23,9 @@
                 <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Create Category</button>
             </form>
 
-            <div id="category-layout" class="mt-6 flex items-start gap-4">
-                <div id="unassigned" class="flex-shrink-0"></div>
-                <div id="category-container" class="flex-1 flex gap-4 overflow-x-auto items-start"></div>
+            <div id="category-layout" class="mt-6 flex flex-col gap-4">
+                <div id="unassigned"></div>
+                <div id="category-container" class="flex flex-col gap-4"></div>
             </div>
         </main>
     </div>
