--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -3,7 +3,7 @@
   <div class="w-full flex items-center justify-between px-4">
     <div class="flex items-center space-x-4">
       <i class="fas fa-piggy-bank h-8 w-8"></i>
-      <button id="menu-toggle" class="md:hidden bg-indigo-700 p-2 rounded"><i class="fas fa-bars h-4 w-4"></i></button>
+      <button id="menu-toggle" class="md:hidden bg-indigo-700 text-white p-2 rounded"><i class="fas fa-bars h-4 w-4"></i></button>
       <div class="font-bold text-lg flex items-center">
         <span>Personal Finance Manager</span>
         <span id="release-number" class="ml-2 bg-indigo-700 text-white text-[0.675rem] px-2 py-0.5 rounded">v0.0.0</span>
