--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,15 +28,15 @@
 
             <section class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <i class="fas fa-chart-line w-16 h-16 mb-2"></i>
+                    <i class="fas fa-chart-line fa-6x mb-2"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <i class="fas fa-piggy-bank w-16 h-16 mb-2"></i>
+                    <i class="fas fa-piggy-bank fa-6x mb-2"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <i class="fas fa-wallet w-16 h-16 mb-2"></i>
+                    <i class="fas fa-wallet fa-6x mb-2"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
             </section>
