Show 2FA status in topbar

--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -20,7 +20,7 @@
         <span id="latest-statement-text">Latest Statement</span>
       </a>
       <div id="user-info" class="flex items-center">
-        <i class="fas fa-user h-4 w-4 mr-1"></i>
+        <i id="user-icon" class="fas fa-user h-4 w-4 mr-1"></i>
         <span id="current-user">&nbsp;</span>
       </div>
     </div>
