--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -70,6 +70,7 @@
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="logs.html"><i class="fas fa-scroll mr-1"></i> View Logs</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="dedupe.html"><i class="fas fa-clone mr-1"></i> Remove Duplicates</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="backup.html"><i class="fas fa-database mr-1"></i> Backup &amp; Restore</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../settings.php"><i class="fas fa-cog mr-1"></i> System Settings</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../users.php"><i class="fas fa-users mr-1"></i> Manage Users</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="../logout.php"><i class="fas fa-right-from-bracket mr-1"></i> Logout</a></li>
     </ul>
